--- a/Android/Hexapod/app/src/main/AndroidManifest.xml
+++ b/Android/Hexapod/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".ConnectionActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +21,7 @@
         </activity>
         <activity
             android:name=".SteeringActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_steering" >
         </activity>
     </application>
