--- a/Android/Hexapod/app/src/main/AndroidManifest.xml
+++ b/Android/Hexapod/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="Hexapod"
         android:theme="@style/AppTheme" >
         <activity
